--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://bachurskii.github.io/goit-js-hw-11",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/"
+    "build": "parcel build src/*.html --public-url /bachurskii/"
   },
   "repository": {
     "type": "git",
